Avoid recursive frame construction by using an event to call ActuallyDisplayText(). b=283117 r+sr=bzbarsky